# rblk

./: .gitignore  Cargo.toml  LICENSE  LICENSE.md  README.md  blockchain.json  blockchain_data.json  wallets.json
block_test/: main.py  walet.test.py
kernel/: Cargo.toml
kernel/src/: api.rs  block.rs  blockchain.rs  miner.rs  transaction.rs  wallet.rs
mod_wallet/: Cargo.toml
mod_wallet/src/: main.rs
src/: api.rs  block.rs  blockchain.rs  lib.rs  main.rs  miner.rs  network.rs  transaction.rs  wallet.rs
tests/: block_tests.rs  blockchain_tests.rs  miner_tests.rs  wallet_tests.rs
